  simulations give wrong value in terminal due to domain decomposition)

### Tutorials

- darcyFoam

  - fix input folder (0 -> 0.org) to avoid paraview visualizations

### utilities

- setBoundaryWaterLevel

  - replace setBoundaryHeadPressure as it can be used for potential or h
  - version option (2D/3D) has been replaced by field option (h/potential)

************************
*** PMFv2107
*** Bug Fix + tools folder 
************************

### General

- MNT (Modèle Numérique de Terrain) has been replaced by DEM (Digital
  Elevation Model) for file name, field name, comments...

### Tools

- new folder containing external tools (python/bash scripts) for the toolbox

- pmf_csvToEvent

  - python script to convert csv file extracted from simulations into event
  file. It can be used to recover 1D column unsaturated fluxes for example to
  inject in 2D watershed model. For usage, execute:

  python pmf_csvToEvent.py --help

### Tutorials

- Global

  - scripts are now compatible with python 3.

### Bug fixes

- Time-step management when (eventTimeTracking=false) has been fixed

************************
*** PMFv2102
*** Newton Algorithm for unsaturated solvers (groundwater)
************************

### Compilation

- Toolbox now accepts parallel compilation, run :

  ./Allwmake -jX

  with X the number of processors

### Solvers

- Global

  - output event value are not explictly computed but constructed by
  interpolation to avoid time step instabilities. Time interpolated fields are
  also used for CSV outputs.

- groundwaterFoam/groundwaterTransportFoam

  - pressure head equation can be solved using Newton algorithm to handle
  strong non linearities. Convergence is faster than Picard's algorithm and can
  handle complex cases where Picard does not converge, for example flow close
  to the saturated point.
  - pressure head equation is first solved using Picard formulation until the